fixed muted channels being invisible

--- a/config/pywal-discord.css
+++ b/config/pywal-discord.css
@@ -12,11 +12,11 @@ element {
     --text-normal: var(--color7);
     --text-muted: var(--color7);
     --text-link: var(--color12);
-    --channels-default: var(--color7);
-    --interactive-normal: var(--color7);
+    --channels-default: var(--color15);
+    --interactive-normal: var(--color15);
     --interactive-hover: var(--color15);
     --interactive-active: var(--color15);
-    --interactive-muted: var(--color8);
+    --interactive-muted: var(--color7);
     --background-primary: var(--color0);
     --background-secondary: var(--color8);
     --background-secondary-alt: var(--color8);
@@ -57,12 +57,12 @@ element {
     --header-primary: var(--color8);
     --header-secondary: var(--color0);
     --text-normal: var(--color0);
-    --text-muted: var(--color0);
+    --text-muted: var(--color8);
     --text-link: var(--color12);
     --channels-default: var(--color0);
 	--interactive-hover: var(--color8);
     --interactive-active: var(--color8);
-    --interactive-muted: var(--color7);
+    --interactive-muted: var(--color8);
     --background-primary: var(--color7);
     --background-secondary: var(--color15);
     --background-secondary-alt: var(--color15);
